Edición de la etiqueta title en todas las páginas

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         
 
         <div>
-            <section class=itinerario">
-                <h2 class="itinerario__titulo">Armá tu itinerario</h2>
+            <section class="itinerario">
+                <h2 class="subtitulo-secciones">Armá tu itinerario</h2>
                 <article class="itinerario__contenido">
                     <img class="itinerario__imagen"src="./img/itinerario.jpg" alt="hombre parado frente a la ventana con su carry on mirando un avión despegar">
                     <p class="itinerario__parrafo">Explorá entre miles de ciudades y encontrá los vuelos, trenes y hoteles para tu viaje. Creando un usuario, podés guardar los lugares que querés visitar, armar un calendario con las fechas de tu viaje y guardar los vouchers de tus vuelos y reservas de hotel, <b>¡todo en un sólo lugar!</b></p>
@@ -92,11 +92,11 @@
 
                     <article class="hoteles__destacados__tarjetas">
                         <img class="hoteles__destacados__imagen" src="./img//catalonia-barcelona.jpeg" alt="Fachada del hotel Catalonia Ramblas en Barcelona">
-                        <En class="hoteles__destacados__titulo">En el corazón de Barcelona.</h4>
+                        <h4 class="hoteles__destacados__titulo">Ubicado en el corazón de Barcelona.</h4>
                     </article>    
                 </div>
-                <div class="hoteles__boton">
-                    <a href="./pages/hoteles.html"<button>Ver más opciones </button></a>
+                <div class="boton">
+                    <a href="./pages/hoteles.html" button>Ver más opciones </button></a>
                 </div>
                 <div>
                     <section>
@@ -117,14 +117,14 @@
 
                 <div class="recordatorios__textos">
                     <img src="./img/on-button.png" class="recordatorios__textos__switch">
-                    <h4 class="recordatorios__textos__titulo">Activá recordatorios</h4>
+                    <h3 class="recordatorios__textos__titulo">Activá recordatorios</h3>
                     <p class="recordatorios__textos__parrafo">Guardá eventos, sitios de interés y programá alertas de precios bajos para optimizar tu presupuesto de viaje. Podés programar tus avisos por mail, sms o Whatsapp.</p>
                 </div>
             </section>
         </div>
 
         <div class="reseñas">      
-            <h2 class="reseñas__titulo">¡Conocé la experiencia de otros viajeros!</h2>
+            <h2 class="subtitulo-secciones">¡Conocé la experiencia de otros viajeros!</h2>
             <hr class="reseñas__divisor">
 
             <section class="reseñas__tarjetas">
@@ -143,7 +143,7 @@
                     <h5 class="reseñas__tarjetas__user-name">Sebastián Camargo</h5>
                     <h6 class="reseñas__tarjetas__user-country">Colombia</h6>
                     <img class="reseñas__tarjetas__imgreseña" src="./img/palazzopitti.jpeg" class=img-reseña alt="vista exterior del palacio pitti en florencia, italia">
-                    <p class="reseñas__tarjetas__user-opinion">Disfrutamos mucho el paseo por el Palazzo Pitti,¡imperdible! </p>
+                    <p class="reseñas__tarjetas__user-opinion">Disfrutamos mucho el paseo por el Palazzo Pitti ¡imperdible! </p>
                     <img src="./img/star-03.png" class="reseñas__tarjetas__estrellas" alt="valoracion de cinco estrellas">
                 </article>
 
@@ -161,7 +161,7 @@
                     <h5 class="reseñas__tarjetas__user-name">Claudio Blanco</h5>
                     <h6 class="reseñas__tarjetas__user-country"> Argentina</h6>
                     <img class="reseñas__tarjetas__imgreseña" src="/img/castillohighclere.jpeg" class=img-reseña alt="vista de unos de los pasillos del mercado de la concepció en barcelona">
-                    <p class="reseñas__tarjetas__user-opinion">Soñado paseo a una hora de distancia de</p>
+                    <p class="reseñas__tarjetas__user-opinion">Soñado paseo a una hora de distancia de Londres.</p>
                     <img src="./img/star-03.png" class="reseñas__tarjetas__estrellas" alt="valoracion de dos estrellas">
                 </article>
             </section>
@@ -195,11 +195,11 @@
                 <form action="suscriptores"  class="footer__formsuscripcion">
                     <input type="email" placeholder="Ingresá tu email" class="footer__formsuscripcion__email">
                     <input type="checkbox" class="footer__formsuscripcion__checkbox--explorar"><p class="footer__formsuscripcion__acuerdo">Estoy de acuerdo con los <a href=""></a>Términos y Condiciones.</p>
-                    <button class="footer__formsuscripcion__boton"> Suscribirme</button>    
+                    <button class="footer__formsuscripcion__boton "> Suscribirme</button>    
                 </form>
             </div>
 
-            <div class="footer__index"-footer"">
+            <div class="footer__index">
                 <nav>
                     <ul class="footer__index__menu">
                         <li><a href="index.html">Inicio</a></li>
