Edición de la meta description de todas las páginas

--- a/pages/vuelos.html
+++ b/pages/vuelos.html
@@ -9,7 +9,8 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 
-    <title>Encontrá los mejores precios en vuelos y conexiones</title>
+    <title>Los mejores precios en vuelos y conexiones en todo el mundo.</title>
+    <meta name="description" content="Compará precios de vuelos, vuelos baratos sin equipaje, vuelos directos o con escalas a Europa, al Caribe USA, y todo el mundo">
 
 </head>
 
