--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Explorá</title>
+    <title>Contactanos si tenés consultas o sugerencias</title>
+    <meta name="description" content="Dejanos tu mensaje, seguinos en las redes de Wanderlust y suscribite a nuestro newsletter.">
+
 </head>
 
 <body>
