--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Explorá</title>
+    <title>Explorá y armá el itienerario de tu viaje</title>
+    <meta name="description" content="Qué ver, qué comer y dónde dormir en tu viaje. Los clásicos y las joyas ocultas de cada ciudad, con reseñas de nuestra comunidad viajera.">
+
 </head>
 
 <body>
