--- a/pages/hoteles.html
+++ b/pages/hoteles.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Hoteles</title>
+    <title>Encontrá el alojamiento perfecto para tu próximo viaje</title>
+    <meta name="description" content="Hoteles de lujo, posadas, hostels, encontrá el alojamiento para tu viaje, adaptado a tu presupuesto.">
 </head>
 
 <body>
