Inclusión de etiqueta keywords a todas las páginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>Contactanos si tenés consultas o sugerencias</title>
     <meta name="description" content="Dejanos tu mensaje, seguinos en las redes de Wanderlust y suscribite a nuestro newsletter.">
+    <meta name="keywords" content="Seguinos, redes sociales, instagram viajes, tik tok viajes">
 
 </head>
 
