--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>Explorá y armá el itienerario de tu viaje</title>
     <meta name="description" content="Qué ver, qué comer y dónde dormir en tu viaje. Los clásicos y las joyas ocultas de cada ciudad, con reseñas de nuestra comunidad viajera.">
+    <meta name="keywords" content="Viaje, aventura, recorrido, free walking tour, museo, parques, paisaje, paquete de viajes">
 
 </head>
 
