--- a/pages/hoteles.html
+++ b/pages/hoteles.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>Encontrá el alojamiento perfecto para tu próximo viaje</title>
     <meta name="description" content="Hoteles de lujo, posadas, hostels, encontrá el alojamiento para tu viaje, adaptado a tu presupuesto.">
+    <meta name="keywords" content="Hotel, all inclusive, hostel, posada, hotel barato, hotel con vistas, hotel barato">
+
+
 </head>
 
 <body>
