--- a/pages/vuelos.html
+++ b/pages/vuelos.html
@@ -11,6 +11,7 @@
 
     <title>Los mejores precios en vuelos y conexiones en todo el mundo.</title>
     <meta name="description" content="Compará precios de vuelos, vuelos baratos sin equipaje, vuelos directos o con escalas a Europa, al Caribe USA, y todo el mundo">
+    <meta name="keywords" content="Vuelos baratos, vuelo directo, vuelo con escalas, millas, vuelo a miami, vuelo a madrid, vuelo a barcelona, vuelo a roma">
 
 </head>
 
