Inclusión del favicon

--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -9,8 +9,13 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Explorá y armá el itienerario de tu viaje</title>
-    <meta name="description" content="Qué ver, qué comer y dónde dormir en tu viaje. Los clásicos y las joyas ocultas de cada ciudad, con reseñas de nuestra comunidad viajera.">
-    <meta name="keywords" content="Viaje, aventura, recorrido, free walking tour, museo, parques, paisaje, paquete de viajes">
+    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
+
+
+    <meta name="description"
+        content="Qué ver, qué comer y dónde dormir en tu viaje. Los clásicos y las joyas ocultas de cada ciudad, con reseñas de nuestra comunidad viajera.">
+    <meta name="keywords"
+        content="Viaje, aventura, recorrido, free walking tour, museo, parques, paisaje, paquete de viajes">
 
 </head>
 
