--- a/pages/vuelos.html
+++ b/pages/vuelos.html
@@ -8,10 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
+
 
     <title>Los mejores precios en vuelos y conexiones en todo el mundo.</title>
-    <meta name="description" content="Compará precios de vuelos, vuelos baratos sin equipaje, vuelos directos o con escalas a Europa, al Caribe USA, y todo el mundo">
-    <meta name="keywords" content="Vuelos baratos, vuelo directo, vuelo con escalas, millas, vuelo a miami, vuelo a madrid, vuelo a barcelona, vuelo a roma">
+    <meta name="description"
+        content="Compará precios de vuelos, vuelos baratos sin equipaje, vuelos directos o con escalas a Europa, al Caribe USA, y todo el mundo">
+    <meta name="keywords"
+        content="Vuelos baratos, vuelo directo, vuelo con escalas, millas, vuelo a miami, vuelo a madrid, vuelo a barcelona, vuelo a roma">
 
 </head>
 
@@ -58,7 +62,8 @@
                 <div class="banner-princ--vuelos">
                     <h1 class="titulo-paginas">Vuelos</h1>
                 </div>
-                <p class="banner-princ__parrafo--pages"> <b> ¿Vuelo o tren? </b> Te ayudamos a elegir el mejor transporte según tu
+                <p class="banner-princ__parrafo--pages"> <b> ¿Vuelo o tren? </b> Te ayudamos a elegir el mejor
+                    transporte según tu
                     itinerario.</p>
             </article>
         </section>
@@ -144,7 +149,7 @@
 
             </div>
 
-            </section>
+        </section>
 
         <section class="registro">
             <div class="registro__ilustracion">
