--- a/pages/vuelos.html
+++ b/pages/vuelos.html
@@ -8,8 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
+    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
 
     <title>Los mejores precios en vuelos y conexiones en todo el mundo.</title>
     <meta name="description"
