Animación de títulos y párrafos en todas las páginas

--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -8,12 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
 
     <title>Explorá y armá el itienerario de tu viaje</title>
-    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
-
-
     <meta name="description"
         content="Qué ver, qué comer y dónde dormir en tu viaje. Los clásicos y las joyas ocultas de cada ciudad, con reseñas de nuestra comunidad viajera.">
     <meta name="keywords"
@@ -62,9 +61,10 @@
         <section>
             <article>
                 <div class="banner-princ--explorar">
-                    <h1 class="titulo-paginas">Explorá</h1>
+                    <h1 class="titulo-paginas animate__animated animate__pulse">Explorá</h1>
                 </div>
-                <p class="banner-princ__parrafo-pages">Si estás empezando a planear tu viaje, ¡estás en el lugar
+                <p class="banner-princ__parrafo-pages animate__animated animate__fadeInUp">Si estás empezando a planear
+                    tu viaje, ¡estás en el lugar
                     correcto! ¿Cuál es la mejor época para viajar, dónde alojarte, qué comer, qué lugares visitar?
                     Sumergite en un mar de posibilidades y armá tu itinerario ideal. Porque existen tantas posibilidades
                     de viaje, como personas en el mundo.</p>
