--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 
 
@@ -58,8 +58,9 @@
     <section>
         <article>
             <div class="banner-princ">
-                <h1 class="banner-princ__titulo">Tu guía de viaje</h1>
-                <p class="banner-princ__parrafo">Explorá los lugares destacados de cada ciudad y armá el itinerario de
+                <h1 class="banner-princ__titulo animate__animated animate__slideInDown">Tu guía de viaje</h1>
+                <p class="banner-princ__parrafo animate__animated animate__fadeIn">Explorá los lugares destacados de
+                    cada ciudad y armá el itinerario de
                     tu próximo viaje.</p>
             </div>
         </article>
@@ -68,11 +69,12 @@
 
     <div>
         <section class="itinerario">
-            <h2 class="subtitulo-secciones">Armá tu itinerario</h2>
+            <h2 class="subtitulo-secciones animate__animated animate__pulse">Armá tu itinerario</h2>
             <article class="itinerario__contenido">
                 <img class="itinerario__imagen" src="./img/itinerario.jpg"
                     alt="hombre parado frente a la ventana con su carry on mirando un avión despegar">
-                <p class="itinerario__parrafo">Explorá entre miles de ciudades y encontrá los vuelos, trenes y hoteles
+                <p class="itinerario__parrafo animate__animated animate__fadeInUp">Explorá entre miles de ciudades y
+                    encontrá los vuelos, trenes y hoteles
                     para tu viaje. Creando un usuario, podés guardar los lugares que querés visitar, armar un calendario
                     con las fechas de tu viaje y guardar los vouchers de tus vuelos y reservas de hotel, <b>¡todo en un
                         sólo lugar!</b></p>
@@ -83,7 +85,8 @@
     <div>
         <section class="hoteles">
             <article class="hoteles__encabezado">
-                <h2 class="hoteles__encabezado__titulo">Guardá tus reservas de hoteles</h2>
+                <h2 class="hoteles__encabezado__titulo animate__animated animate__pulse">Guardá tus reservas de hoteles
+                </h2>
                 <h3 class="hoteles__encabezado__subtitulo">¡Registrate ahora!</h3>
                 <p class="hoteles__encabezado__parrafo">Y guardá las reservas de hoteles en tu usuario para tenelas
                     siempre a mano, <b>¡con o sin conexión a Internet!</b> Además, podés configurar recordatorios para
@@ -135,7 +138,7 @@
     <div>
         <section class="recordatorios">
             <div class="recordatorios__ilustracion">
-                <img src="./img/viajeros.png"
+                <img class="animate__animated animate__pulse" src="./img/viajeros.png"
                     alt="ilustración de una pareja de viajeros, con pinos y una montaña de fondo" class="viajeros">
             </div>
 
