--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <title>Contactanos si tenés consultas o sugerencias</title>
-    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
+    <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
 
 
     <meta name="description"
@@ -64,9 +64,10 @@
 
         <section>
             <div class="banner-princ--contacto">
-                <h1 class="titulo-paginas">Contacto</h1>
+                <h1 class="titulo-paginas animate__animated animate__animate__pulse">Contacto</h1>
             </div>
-            <p class="banner-princ__parrafo-pages">¿Tenés dudas o sugerencias? ¡Escribinos!</p>
+            <p class="banner-princ__parrafo-pages animate__animated animate__fadeInUp">¿Tenés dudas o sugerencias?
+                ¡Escribinos!</p>
         </section>
 
         <section class="buscador-vuelos">
