--- a/pages/hoteles.html
+++ b/pages/hoteles.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="icon" href="./img/favicon-wanderelus.png" type="image/x-icon">
+    <link rel="icon" href="/img/favicon-wanderelus.png" type="image/x-icon">
 
 
     <title>Encontrá el alojamiento perfecto para tu próximo viaje</title>
@@ -64,9 +64,10 @@
         <section>
             <article>
                 <div class="banner-princ--hoteles">
-                    <h1 class="titulo-paginas">Hoteles</h1>
+                    <h1 class="titulo-paginas animate__animated animate__pulse">Hoteles</h1>
                 </div>
-                <h2 class="banner-princ__parrafo--pages">¿Qué clase de alojamientos es el adecuado para vos?</h2>
+                <h2 class="banner-princ__parrafo--pages animate__animated animate__fadeInUp">¿Qué clase de alojamientos
+                    es el adecuado para vos?</h2>
             </article>
         </section>
 
