Corrección de errores en el footer

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <h3 class="footer__titulos">¡Recibí todas nuestras novedades!</h3>
             <form action="suscriptores" class="footer__formsuscripcion">
                 <input type="email" placeholder="Ingresá tu email" class="footer__formsuscripcion__email">
-                <input type="checkbox" class="footer__formsuscripcion__checkbox--explorar">
+                <input type="checkbox" class="footer__formsuscripcion__checkbox">
                 <p class="footer__formsuscripcion__acuerdo">Estoy de acuerdo con los <a href=""></a>Términos y
                     Condiciones.</p>
                 <button class="footer__formsuscripcion__boton "> Suscribirme</button>
@@ -266,7 +266,7 @@
     </div>
 
     <div class="footer__siteinfo">
-        <p>Diseñado por<a href="www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
+        <p>Diseñado por<a href="https://www.agencialol.com.ar"> LOL Agencia</a> · Wanderlust® 2023 Todos los derechos
             reservados.</p>
     </div>
 </footer>
