Correccion de las rutas de las imagenes

--- a/pages/explorar.html
+++ b/pages/explorar.html
@@ -247,20 +247,24 @@
             <div class="footer__rrss">
                 <h3 class="footer__titulos">¡Seguinos!</h3>
 
-                <ul class="footer__iconos-rrss">
-                    <li><a href="https://www.facebook.com" target="blank">
-                            <img src="../img/fb.png" alt="logo facebook">
-                        </a></li>
-                    <li><a href="https://www.instagram.com" target="blank">
-                            <img src="../img/inst.png" alt="logo instagram">
-                        </a></li>
-                    <li><a href="https://www.tiktok.com" target="blank">
-                            <img src="../img/tik.png" alt="logo tiktok">
-                        </a></li>
-                    <li><a href="https://www.twitter.com" target="blank">
-                            <img src="../img/tw.png" alt="logo twitter">
-                        </a></li>
-                </ul>
+                <div class="footer__index">
+                <nav>
+                    <ul class="footer__iconos-rrss">
+                        <li><a href="https://www.facebook.com" target="blank">
+                                <img src="../img/fb.png" alt="logo facebook">
+                            </a></li>
+                        <li><a href="https://www.instagram.com" target="blank">
+                                <img src="../img/inst.png" alt="logo instagram">
+                            </a></li>
+                        <li><a href="https://www.tiktok.com" target="blank">
+                                <img src="../img/tik.png" alt="logo tiktok">
+                            </a></li>
+                        <li><a href="https://www.twitter.com" target="blank">
+                                <img src="../img/tw.png" alt="logo twitter">
+                            </a></li>
+                    </ul>
+                </nav>
+            </div>
 
             </div>
 
@@ -275,18 +279,19 @@
                 </form>
             </div>
 
-            <div class="footer__index">
-                <nav>
-                    <ul class="footer__index__menu">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li> <a href="./explorar.html">Explorá</a></li>
-                        <li><a href="./vuelos.html">Vuelos </a></li>
-                        <li><a href="./hoteles.html">Hoteles </a></li>
-                        <li><a href="./contacto.html">Contacto </a></li>
-                    </ul>
-                </nav>
-            </div>
+             <div class="footer">
 
+                <div class="footer__index">
+                    <nav>
+                        <ul class="footer__index__menu">
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li> <a href="./filtros.html">Explorá</a></li>
+                            <li><a href="./vuelos.html">Vuelos </a></li>
+                            <li><a href="./hoteles.html">Hoteles </a></li>
+                            <li><a href="./contacto.html">Contacto </a></li>
+                        </ul>
+                    </nav>
+                </div>
             <div>
                 <nav>
                     <ul class="footer__terms">
