--- a/pages/hoteles.html
+++ b/pages/hoteles.html
@@ -171,25 +171,26 @@
 
     <footer>
         <div class="footer">
-            <div class="footer__rrss">
-                <h3 class="footer__titulos">¡Seguinos!</h3>
-
-                <ul class="footer__iconos-rrss">
-                    <li><a href="https://www.facebook.com" target="blank">
-                            <img src="../img/fb.png" alt="logo facebook">
-                        </a></li>
-                    <li><a href="https://www.instagram.com" target="blank">
-                            <img src="../img/inst.png" alt="logo instagram">
-                        </a></li>
-                    <li><a href="https://www.tiktok.com" target="blank">
-                            <img src="../img/tik.png" alt="logo tiktok">
-                        </a></li>
-                    <li><a href="https://www.twitter.com" target="blank">
-                            <img src="../img/tw.png" alt="logo twitter">
-                        </a></li>
-                </ul>
-
-            </div>
+            <div class="footer">
+                <div class="footer__rrss">
+                    <h3 class="footer__titulos">¡Seguinos!</h3>
+    
+                    <ul class="footer__iconos-rrss">
+                        <li><a href="https://www.facebook.com" target="blank">
+                                <img src="../img/fb.png" alt="logo facebook">
+                            </a></li>
+                        <li><a href="https://www.instagram.com" target="blank">
+                                <img src="../img/inst.png" alt="logo instagram">
+                            </a></li>
+                        <li><a href="https://www.tiktok.com" target="blank">
+                                <img src="../img/tik.png" alt="logo tiktok">
+                            </a></li>
+                        <li><a href="https://www.twitter.com" target="blank">
+                                <img src="../img/tw.png" alt="logo twitter">
+                            </a></li>
+                    </ul>
+    
+                </div>
 
             <div class="footer__suscriptores">
                 <h3 class="footer__titulos">¡Recibí todas nuestras novedades!</h3>
@@ -206,14 +207,13 @@
                 <nav>
                     <ul class="footer__index__menu">
                         <li><a href="../index.html">Inicio</a></li>
-                        <li> <a href="./explorar.html">Explorá</a></li>
+                        <li> <a href="./filtros.html">Explorá</a></li>
                         <li><a href="./vuelos.html">Vuelos </a></li>
                         <li><a href="./hoteles.html">Hoteles </a></li>
                         <li><a href="./contacto.html">Contacto </a></li>
                     </ul>
                 </nav>
             </div>
-
             <div>
                 <nav>
                     <ul class="footer__terms">
